[package]
name = "massudpproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# network
tokio = { version = "1.42.0", features = ["full"] }
dashmap = "6.1.0"
futures = "0.3.31"


# logging
env_logger = "0.11.5"
log = "0.4.22"

# cmdline parsing
clap = { version = "4.5.23", features = ["derive"] }

# cfg handling
serde = "1.0.216"
serde_derive = "1.0.216"
toml = "0.8.19"
bytes = "1.9.0"

# rate limit
rlimit = "0.10.2"
libc = "0.2.168"

